# MeanFlow_TV

./: .gitignore  comparison.py  distribution.py  inf_and_plot.py  losses.py  model.py  pyproject.toml  trainer.py
conf/: training_and_evaluation.yaml
notebooks/: sample.ipynb
src/conf/: conf.py  dataset.py  model.py
src/mftv/: callbacks.py  comparison.py  datasets.py  distribution.py  inf_and_plot.py  loggers.py  losses.py  main.py  model.py  plots.py  trainer.py  utils.py
